; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccpp.c_inp.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccpp.c_inp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64* }

@file = common dso_local global %struct.TYPE_2__* null, align 8
@ch = common dso_local global i64 0, align 8
@CH_EOB = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @inp() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @file, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i64*, i64** %2, align 8
  %4 = getelementptr inbounds i64, i64* %3, i32 1
  store i64* %4, i64** %2, align 8
  %5 = load i64, i64* %4, align 8
  store i64 %5, i64* @ch, align 8
  %6 = load i64, i64* @ch, align 8
  %7 = load i64, i64* @CH_EOB, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = call i64 (...) @handle_eob()
  store i64 %10, i64* @ch, align 8
  br label %11

11:                                               ; preds = %9, %0
  ret void
}

declare dso_local i64 @handle_eob(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
